--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@loopback/rest": "^13.1.5",
     "@loopback/rest-explorer": "^6.1.5",
     "@loopback/service-proxy": "^6.1.5",
+    "crypto-js": "^4.2.0",
+    "generate-password": "^1.7.1",
     "loopback-connector-mongodb": "^5.6.0",
     "mongodb": "3.6",
     "tslib": "^2.0.0"
