--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@loopback/service-proxy": "^6.1.5",
     "crypto-js": "^4.2.0",
     "generate-password": "^1.7.1",
+    "jsonwebtoken": "^9.0.2",
     "loopback-connector-mongodb": "^5.6.0",
     "mongodb": "3.6",
     "tslib": "^2.0.0"
